--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,11 @@ jobs:
 
       - name: Setting Up Local Repo
         run: |
-          cd ~/android/lineage
           echo "Initializing Repo with LineageOS source..."
           PATH="${HOME}/.bin:${PATH}"
           repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --depth 1 --git-lfs
           echo "Syncing Repo with optimizations..."
-          repo sync --current-branch --no-tags --no-clone-bundle -j4
+          repo sync --current-branch --no-tags --no-clone-bundle -j4 --verbose
           echo "Repo initialization and sync completed."
 
       - name: Setting Up Build Environment
