--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,7 @@ jobs:
       - name: Installing Dependencies from Apt
         run: |
           sudo apt-get update
-          sudo apt-get install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git curl
-
-      - name: Installing "repo" Tool
-        run: |
-          echo "Setting up repo tool..."
-          mkdir -p ~/.bin
-          PATH="${HOME}/.bin:${PATH}"
-          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
-          chmod a+rx ~/.bin/repo
-          echo "Repo tool setup completed."
+          sudo apt-get install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git curl repo
 
       - name: Authenticating "repo" with GitHub Account
         run: |
@@ -43,7 +34,7 @@ jobs:
           PATH="${HOME}/.bin:${PATH}"
           repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --depth 1 --git-lfs
           echo "Syncing Repo with optimizations..."
-          repo sync --current-branch --no-tags --no-clone-bundle -j4 --verbose
+          for i in {1..5}; do repo sync --current-branch --no-tags --no-clone-bundle -j4 --verbose && break || sleep 15; done
           echo "Repo initialization and sync completed."
 
       - name: Setting Up Build Environment
