--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,16 @@ jobs:
       - name: Installing Dependencies from Apt
         run: |
           sudo apt-get update
-          sudo apt-get install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git curl
+          sudo apt-get install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev nala bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git curl
           
-      - name: Installing "repo" Tool
+      - name: Installing "repo" Tool and Git LFS
         run: |
-          echo "Setting up repo tool..."
+          sudo nala install -y git-lfs
+          git lfs install
           mkdir -p ~/.bin
           PATH="${HOME}/.bin:${PATH}"
           curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
           chmod a+rx ~/.bin/repo
-          echo "Repo tool setup completed."
 
       - name: Authenticating "repo" with GitHub Account
         run: |
@@ -43,7 +43,7 @@ jobs:
           PATH="${HOME}/.bin:${PATH}"
           repo init -u https://github.com/LineageOS/android.git -b lineage-20.0 --git-lfs
           echo "Syncing Repo with optimizations..."
-          repo sync --current-branch --no-tags --no-clone-bundle -j4 --verbose
+          repo sync --verbose
           echo "Repo initialization and sync completed."
           mkdir -p device/samsung
           git clone https://github.com/khushtaur3123/android_device_samsung_a7y18lte.git device/samsung/a7y18lte
