--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Installing Dependencies from Apt
         run: |
           sudo apt update
-          sudo apt install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev nala bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git curl
+          sudo apt purge snapd
+          sudo apt install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev nala bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git nala curl
           
       - name: Installing "repo" Tool and Git LFS
         run: |
           cd ~/android/lineage
-          sudo apt install nala
           sudo nala upgrade -y
           sudo nala install -y git-lfs repo
           git lfs install
@@ -47,6 +47,7 @@ jobs:
         run: |
           echo "Syncing Repo with optimizations..."
           cd ~/android/lineage
+          repo init --help
           repo sync
           echo "Repo initialization and sync completed."
 
