--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,7 @@ on: workflow_dispatch
 jobs:
   build-for-a7y18lte:
     runs-on: ubuntu-latest
-    container:
-      image: debian:testing
+    
     steps:
       - name: Setting up Build Directories
         run: |
@@ -16,14 +15,16 @@ jobs:
 
       - name: Installing Dependencies from Apt
         run: |
-          apt update
-          apt install sudo
+          sudo apt update
           sudo apt install -y openjdk-8-jdk libwxgtk3.0-gtk3-dev nala bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git curl
           
       - name: Installing "repo" Tool and Git LFS
         run: |
-          cd ~/android/lineage
-          sudo apt install -y git-lfs repo
+          mkdir -p ~/.bin
+          PATH="${HOME}/.bin:${PATH}"
+          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
+          chmod a+rx ~/.bin/repo
+          sudo apt install -y git-lfs
           git lfs install
 
       - name: Authenticating "repo" with GitHub Account
@@ -49,7 +50,7 @@ jobs:
         run: |
           echo "Syncing Repo with optimizations..."
           cd ~/android/lineage
-          repo sync
+          repo sync --depth 1
           echo "Repo initialization and sync completed."
 
       - name: Setting Up Samsung Device Dependencies
