--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Syncing Repo with Optimizations
         run: |
+          PATH="${HOME}/.bin:${PATH}"
           echo "Syncing Repo with optimizations..."
           cd ~/android/lineage
           repo sync --depth 1
@@ -55,6 +56,7 @@ jobs:
 
       - name: Setting Up Samsung Device Dependencies
         run: |
+          PATH="${HOME}/.bin:${PATH}"
           cd ~/android/lineage
           mkdir -p device/samsung
           git clone https://github.com/khushtaur3123/android_device_samsung_a7y18lte.git device/samsung/a7y18lte
@@ -63,6 +65,7 @@ jobs:
 
       - name: Setting Up Samsung Vendor Dependencies
         run: |
+          PATH="${HOME}/.bin:${PATH}"
           cd ~/android/lineage
           mkdir -p vendor/samsung
           git clone https://github.com/khushtaur3123/android_vendor_samsung_a7y18lte.git vendor/samsung/a7y18lte
@@ -71,12 +74,14 @@ jobs:
 
       - name: Setting Up Build Environment
         run: |
+          PATH="${HOME}/.bin:${PATH}"
           cd ~/android/lineage
           source build/envsetup.sh
           lunch lineage_a7y18lte-userdebug
 
       - name: Starting Build Process
         run: |
+          PATH="${HOME}/.bin:${PATH}"
           cd ~/android/lineage
           croot && mka bacon
 
