--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/ubuntu:20.04
+      - image: circleci/python:3.7
 
     steps:
       - checkout
