--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ jobs:
           name: Setting Up Build Environment
           command: |
             cd ~/android/lineage
+            PATH="${HOME}/.bin:${PATH}"
             repo sync
             source build/envsetup.sh
             lunch lineage_a7y18lte-userdebug
