--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
       - run:
           name: Setting Up Samsung Device Dependencies
           command: |
+            PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage
             mkdir -p device/samsung
             git clone https://github.com/khushtaur3123/android_device_samsung_a7y18lte.git device/samsung/
@@ -70,6 +71,7 @@ jobs:
       - run:
           name: Setting Up Samsung Vendor Dependencies
           command: |
+            PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage
             mkdir -p vendor/samsung
             git clone https://github.com/khushtaur3123/android_vendor_samsung_a7y18lte.git vendor/samsung/
