--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,13 +155,13 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             repo sync
             source build/envsetup.sh
-            lunch lineage_a7y18lte-userdebug
+            breakfast a7y18lte
 
       - run:
           name: Starting Build Process
           command: |
             cd ~/android/lineage_17_1
-            croot && mka bacon
+            croot && brunch a7y18lte
 
       - run:
           name: Get current time
