--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,6 @@ jobs:
             mkdir -p device/samsung
             git clone https://github.com/khushtaur3123/android_device_samsung_a7y18lte.git device/samsung/
             cd device/samsung
-            repo sync
             
       - run:
           name: Setting Up Samsung Device Kernel
@@ -76,7 +75,6 @@ jobs:
             mkdir -p  kernel/samsung/universal7885
             git clone https://github.com/AKSharma87/kernel_samsung_a7y18lte.git  kernel/samsung/universal7885
             cd  kernel/samsung/universal7885
-            repo sync
 
       - run:
           name: Setting Up Samsung Dependencies (SEPolicy)
@@ -86,7 +84,6 @@ jobs:
             mkdir -p device/samsung_slsi/sepolicy
             git clone https://github.com/LineageOS/android_device_samsung_slsi_sepolicy.git device/samsung_slsi/sepolicy
             cd device/samsung_slsi/sepolicy
-            repo sync
 
       - run:
           name: Setting Up Samsung Dependencies (Hardware)
@@ -96,7 +93,6 @@ jobs:
             mkdir -p hardware/samsung
             git clone https://github.com/LineageOS/android_hardware_samsung.git hardware/samsung
             cd hardware/samsung
-            repo sync
 
       - run:
           name: Setting Up Samsung Dependencies (NFC)
@@ -106,7 +102,6 @@ jobs:
             mkdir -p hardware/samsung/nfc
             git clone https://github.com/LineageOS/android_hardware_samsung_nfc.git hardware/samsung/nfc
             cd hardware/samsung/nfc
-            repo sync
 
       - run:
           name: Setting Up Samsung Dependencies (Bluetooth)
@@ -116,7 +111,6 @@ jobs:
             mkdir -p hardware/samsung_slsi/libbt
             git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git hardware/samsung_slsi/libbt
             cd hardware/samsung_slsi/libbt
-            repo sync
 
       - run:
           name: Setting Up Samsung Dependencies (Wi-Fi HAL)
@@ -126,7 +120,6 @@ jobs:
             mkdir -p hardware/samsung_slsi/scsc_wifibt/wifi_hal
             git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal.git hardware/samsung_slsi/scsc_wifibt/wifi_hal
             cd hardware/samsung_slsi/scsc_wifibt/wifi_hal
-            repo sync
 
       - run:
           name: Setting Up Samsung Dependencies (slsi_scsc_wifibt_wpa_supplicant_lib)
@@ -136,7 +129,6 @@ jobs:
             mkdir -p hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
             git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib.git hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
             cd hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
-            repo sync
       
       - run:
           name: Setting Up Samsung Vendor Tree
@@ -146,7 +138,6 @@ jobs:
             mkdir -p vendor/samsung
             git clone https://github.com/khushtaur3123/android_vendor_samsung_a7y18lte.git vendor/samsung/
             cd vendor/samsung
-            repo sync
 
       - run:
           name: Setting Up Build Environment
@@ -161,7 +152,8 @@ jobs:
           name: Starting Build Process
           command: |
             cd ~/android/lineage_17_1
-            croot && brunch a7y18lte
+            croot
+            brunch a7y18lte
 
       - run:
           name: Get current time
