--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage_17_1
             mkdir -p device/samsung_slsi/sepolicy
-            git clone https://github.com/LineageOS/android_device_samsung_slsi_sepolicy.git device/samsung_slsi/sepolicy
+            git clone -b lineage-17.1 https://github.com/LineageOS/android_device_samsung_slsi_sepolicy.git device/samsung_slsi/sepolicy
             cd device/samsung_slsi/sepolicy
 
       - run:
@@ -93,7 +93,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage_17_1
             mkdir -p hardware/samsung
-            git clone https://github.com/LineageOS/android_hardware_samsung.git hardware/samsung
+            git clone -b lineage-17.1 https://github.com/LineageOS/android_hardware_samsung.git hardware/samsung
             cd hardware/samsung
 
       - run:
@@ -102,7 +102,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage_17_1
             mkdir -p hardware/samsung/nfc
-            git clone https://github.com/LineageOS/android_hardware_samsung_nfc.git hardware/samsung/nfc
+            git clone -b lineage-17.1 https://github.com/LineageOS/android_hardware_samsung_nfc.git hardware/samsung/nfc
             cd hardware/samsung/nfc
 
       - run:
@@ -111,7 +111,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage_17_1
             mkdir -p hardware/samsung_slsi/libbt
-            git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git hardware/samsung_slsi/libbt
+            git clone -b lineage-17.1 https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git hardware/samsung_slsi/libbt
             cd hardware/samsung_slsi/libbt
 
       - run:
@@ -120,7 +120,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage_17_1
             mkdir -p hardware/samsung_slsi/scsc_wifibt/wifi_hal
-            git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal.git hardware/samsung_slsi/scsc_wifibt/wifi_hal
+            git clone -b lineage-17.1 https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal.git hardware/samsung_slsi/scsc_wifibt/wifi_hal
             cd hardware/samsung_slsi/scsc_wifibt/wifi_hal
 
       - run:
@@ -129,7 +129,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             cd ~/android/lineage_17_1
             mkdir -p hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
-            git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib.git hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
+            git clone -b lineage-17.1 https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib.git hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
             cd hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
       
       - run:
