--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,8 @@ jobs:
             source build/envsetup.sh
             croot
             export ANDROID_MAJOR_VERSION=q
+            export ARCH=arm64
+            export CROSS_COMPILE=~/toolchain/gcc-linaro-4.9.4-2017.01-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-
             brunch a7y18lte
 
       - run:
