--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,57 +1,47 @@
 version: 2.1
 
-jobs:
-  build:
+executors:
+  android-executor:
     docker:
       - image: circleci/python:3.7
 
+jobs:
+  build:
+    executor: android-executor
     steps:
       - checkout
+
+      # Restoring cache
+      - restore_cache:
+          key: ccache-{{ .Environment.CIRCLE_SHA1 }}
 
       - run:
           name: Setting up Build Directories
           command: |
-            mkdir ~/bin
+            mkdir -p ~/bin
             mkdir -p ~/android/lineage_17_1
+            echo 'export PATH="${HOME}/.bin:${PATH}"' >> $BASH_ENV
+            source $BASH_ENV
             cd ~/android/lineage_17_1
 
       - run:
           name: Installing Dependencies from Apt
           command: |
             sudo apt-get update && sudo apt-get upgrade
-            sudo apt install -y openjdk-11-jdk libwxgtk3.0-gtk3-dev jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
-            sudo apt install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git git-lfs gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev libelf-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
-
+            sudo apt install -y openjdk-11-jdk libwxgtk3.0-gtk3-dev jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git-lfs
 
       - run:
-          name: Installing "repo" Tool and Git LFS
+          name: Installing "repo" Tool
           command: |
-            mkdir -p ~/.bin
-            PATH="${HOME}/.bin:${PATH}"
             curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
             chmod a+rx ~/.bin/repo
-            sudo apt install -y git-lfs
-            git lfs install
-
-      - run:
-          name: Authenticating "repo" with GitHub Account
-          command: |
-            git config --global user.email "$GIT_USER_EMAIL"
-            git config --global user.name "$GIT_USER_NAME"
-
-      - run:
-          name: Enabling Caching
-          command: |
-            export USE_CCACHE=1
-            export CCACHE_EXEC=/usr/bin/ccache
-            ccache -M 25G
 
       - run:
           name: Initializing Repo with LineageOS Source
           command: |
             cd ~/android/lineage_17_1
-            PATH="${HOME}/.bin:${PATH}"
             repo init -u https://github.com/LineageOS/android.git -b lineage-17.1 --depth 1 --git-lfs
+            repo sync
 
       - run:
           name: Syncing Repo with Optimizations
@@ -60,7 +50,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             repo sync
 
-      - run:
+     - run:
           name: Setting Up Samsung Device Tree
           command: |
             PATH="${HOME}/.bin:${PATH}"
@@ -144,28 +134,23 @@ jobs:
       - run:
           name: Setting Up Build Environment
           command: |
+            trap 'tail -n 100 ~/android/lineage_17_1/out/build.log > ~/android/lineage_17_1/out/error_log.txt' ERR
             cd ~/android/lineage_17_1
             PATH="${HOME}/.bin:${PATH}"
             repo sync
             source build/envsetup.sh
             breakfast a7y18lte
-
-      - run:
-          name: Starting Build Process
-          command: |
-            cd ~/android/lineage_17_1
-            source build/envsetup.sh
-            croot
-            export ANDROID_MAJOR_VERSION=q
-            export ARCH=arm64
-            export CROSS_COMPILE=~/toolchain/gcc-linaro-4.9.4-2017.01-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-
             brunch a7y18lte
 
       - run:
-          name: Get current time
-          command: echo "export CURRENT_TIME=$(date +'%D-%M-%Y')" >> $BASH_ENV
+          name: Upload Build Error Log to ix.io
+          command: |
+            if [ -f ~/android/lineage_17_1/out/error_log.txt ]; then
+              IX_URL=$(curl -s -F 'f:1=<~/android/lineage_17_1/out/error_log.txt' ix.io)
+              echo "Error log uploaded to: $IX_URL"
+            fi
 
-      - run:
+          - run:
           name: Create GitHub Release and Upload Assets
           command: |
             RELEASE_RESPONSE=$(curl --data \
@@ -197,6 +182,16 @@ jobs:
               -H "Content-Type: $(file -b --mime-type $ZIP_PATH)" \
               --data-binary "@$ZIP_PATH" \
               "$UPLOAD_URL?name=lineage-a7y18lte.zip"
+
+      - run:
+          name: Save cache after build
+          command: ccache -s
+          when: always
+
+      - save_cache:
+          key: ccache-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/.ccache
 
 workflows:
   version: 2
