--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
       - run:
           name: Installing "repo" Tool
           command: |
+            mkdir -p ~/.bin
             curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
             chmod a+rx ~/.bin/repo
 
