--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,15 @@ jobs:
           name: Installing Dependencies from Apt
           command: |
             sudo apt update
-            sudo DEBIAN_FRONTEND=noninteractive apt install -y openjdk-11-jdk libwxgtk3.0-gtk3-dev jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git-lfs
+            sudo DEBIAN_FRONTEND=noninteractive apt install -y openjdk-11-jdk wget libwxgtk3.0-gtk3-dev jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git-lfs
 
       - run:
           name: Installing "repo" Tool
           command: |
             mkdir -p ~/.bin
             set -x
-            curl -v https://storage.googleapis.com/git-repo-downloads/repo
+            cd ~/.bin
+            wget curl -v https://storage.googleapis.com/git-repo-downloads/repo
             chmod a+rx ~/.bin/repo
 
 
