--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,21 @@ jobs:
           command: |
             sudo apt update
             sudo DEBIAN_FRONTEND=noninteractive apt install -y openjdk-11-jdk wget libwxgtk3.0-gtk3-dev jq bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev git-lfs
+      - run:
+          name: Installing "repo" Tool and Git LFS
+          command: |
+            mkdir -p ~/.bin
+            PATH="${HOME}/.bin:${PATH}"
+            curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
+            chmod a+rx ~/.bin/repo
+            sudo apt install -y git-lfs
+            git lfs install
 
       - run:
-          name: Installing "repo" Tool
+          name: Authenticating "repo" with GitHub Account
           command: |
-            curl -L https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
-            chmod +x ~/bin/repo
+            git config --global user.email "$GIT_USER_EMAIL"
+            git config --global user.name "$GIT_USER_NAME"
 
       - run:
           name: Initializing Repo with LineageOS Source
